conductor-tui/tests/snapshots/tui_snapshots__snap_modal_gate_action.snap
---
source: conductor-tui/tests/tui_snapshots.rs
expression: render_to_string(&state)
---
"┌ Repos & Worktrees (0 active) ──────────────────────────────────────────────┐┌ All Workflow Runs (H: show history, V: ┐"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                       ┌ Gate Action ─────────────────────────────────────────────────────────┐                       │"
"│                       │                                                                      │                       │"
"│                       │Gate Prompt:                                                          │                       │"
"│                       │Review the changes and approve if they look correct.                  │                       │"
"│                       │                                                                      │                       │"
"│                       │Feedback (optional):                                                  │                       │"
"│                       │> _                                                                   │                       │"
"│                       │                                                                      │                       │"
"│                       │  y = approve    n = reject    Esc = cancel                           │                       │"
"│                       │                                                                      │                       │"
"│                       │                                                                      │                       │"
"│                       │                                                                      │                       │"
"│                       │                                                                      │                       │"
"│                       │                                                                      │                       │"
"│                       │                                                                      │                       │"
"│                       └──────────────────────────────────────────────────────────────────────┘                       │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            │└────────────────────────────────────────┘"
"│                                                                            │┌ All Workflow Definitions ──────────────┐"
"│                                                                            ││                                        │"
"└────────────────────────────────────────────────────────────────────────────┘└────────────────────────────────────────┘"
"[Dashboard]  Tab:panel  [/]:column  \:workflows  [S]:settings  q:quit                                                   "
