conductor-tui/tests/snapshots/tui_snapshots__snap_modal_help.snap
---
source: conductor-tui/tests/tui_snapshots.rs
assertion_line: 184
expression: render_to_string(&state)
---
"┌ Repos & Worktrees (0 active) ──────────────────────────────────────────────┐┌ All Workflow Runs (H: show history, V: ┐"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                       ┌ Help ────────────────────────────────────────────────────────────────┐                       │"
"│                       │Keybindings                                                           │                       │"
"│                       │                                                                      │                       │"
"│                       │Global Navigation                                                     │                       │"
"│                       │                                                                      │                       │"
"│                       │  Tab / Shift+Tab     Cycle panel focus                               │                       │"
"│                       │  j / k               Navigate within panel                           │                       │"
"│                       │  G / End             Jump to bottom of list                          │                       │"
"│                       │  g / Home            Jump to top of list                             │                       │"
"│                       │  Ctrl+d / Ctrl+u     Half-page down / up                             │                       │"
"│                       │  Enter               Drill into selected item                        │                       │"
"│                       │  Esc                 Back to previous view                           │                       │"
"│                       │  ?                   Toggle this help                                │                       │"
"│                       │  q                   Quit                                            │                       │"
"│                       │  [ / ]               Focus content / workflow column                 │                       │"
"│                       │  \                   Toggle workflow column                          │                       │"
"│                       │                                                                      │                       │"
"│                       │Global Actions                                                        │                       │"
"│                       │                                                                      │                       │"
"│                       │  a                   Register repository                             │                       │"
"│                       │  c                   Create worktree                                 │                       │"
"│                       │  i                   Adopt existing worktree                         │                       │"
"│                       │  d                   Delete (worktree/repo)                          │                       │"
"│                       │  s                   Sync tickets                                    │                       │"
"│                       │  S                   Manage issue sources                            │                       │"
"│                       │  A                   Toggle closed tickets                           │                       │"
"│                       │  w                   Open workflow picker                            │                       │"
"│                       │  /                   Filter/search                                   │                       │"
"│                       │  T                   Open theme picker                               │                       │"
"│                       │  L                   Filter tickets by label (repo detail)           │                       │"
"│                       │                                                                      │                       │"
"│                       └──────────────────────────────────────────────────────────────────────┘───────────────────────┘"
"│                                                                            │┌ All Workflow Definitions ──────────────┐"
"│                                                                            ││                                        │"
"└────────────────────────────────────────────────────────────────────────────┘└────────────────────────────────────────┘"
"[Dashboard]  Tab:panel  [/]:column  \:workflows  [S]:settings  q:quit                                                   "
