conductor-tui/tests/snapshots/tui_snapshots__snap_modal_input.snap
---
source: conductor-tui/tests/tui_snapshots.rs
expression: render_to_string(&state)
---
"┌ Repos & Worktrees (0 active) ──────────────────────────────────────────────┐┌ All Workflow Runs (H: show history) ───┐"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                             ┌ New worktree ────────────────────────────────────────────┐                             │"
"│                             │                                                          │                             │"
"│                             │Branch name:                                              │                             │"
"│                             │                                                          │                             │"
"│                             │> feat/my-feature_                                        │                             │"
"│                             │                                                          │                             │"
"│                             │  Enter to submit, Esc to cancel                          │                             │"
"│                             │                                                          │                             │"
"│                             │                                                          │                             │"
"│                             │                                                          │                             │"
"│                             │                                                          │                             │"
"│                             └──────────────────────────────────────────────────────────┘                             │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            │└────────────────────────────────────────┘"
"│                                                                            │┌ All Workflow Definitions ──────────────┐"
"│                                                                            ││                                        │"
"└────────────────────────────────────────────────────────────────────────────┘└────────────────────────────────────────┘"
"[Dashboard]  Tab:panel  [/]:column  \:workflows  q:quit                                                                 "
