conductor-tui/tests/snapshots/tui_snapshots__snap_modal_issue_source_manager.snap
---
source: conductor-tui/tests/tui_snapshots.rs
assertion_line: 568
expression: render_to_string(&state)
---
"┌ Repos & Worktrees (0 active) ──────────────────────────────────────────────┐┌ All Workflow Runs (H: show history) ───┐"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                          ┌ Issue Source Manager ──────────────────────────────────────────┐                          │"
"│                          │                                                                │                          │"
"│                          │  Issue Sources for my-app                                      │                          │"
"│                          │                                                                │                          │"
"│                          │  ▸ github                                                      │                          │"
"│                          │      user/my-app                                               │                          │"
"│                          │                                                                │                          │"
"│                          │  a add  d delete  Esc close                                    │                          │"
"│                          │                                                                │                          │"
"│                          │                                                                │                          │"
"│                          │                                                                │                          │"
"│                          │                                                                │                          │"
"│                          │                                                                │                          │"
"│                          │                                                                │                          │"
"│                          │                                                                │                          │"
"│                          │                                                                │                          │"
"│                          │                                                                │                          │"
"│                          │                                                                │                          │"
"│                          │                                                                │                          │"
"│                          └────────────────────────────────────────────────────────────────┘                          │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            │└────────────────────────────────────────┘"
"│                                                                            │┌ All Workflow Definitions ──────────────┐"
"│                                                                            ││                                        │"
"└────────────────────────────────────────────────────────────────────────────┘└────────────────────────────────────────┘"
"[Dashboard]  Tab:panel  [/]:column  \:workflows  q:quit                                                                 "
