conductor-tui/tests/snapshots/tui_snapshots__snap_modal_model_picker.snap
---
source: conductor-tui/tests/tui_snapshots.rs
expression: render_to_string(&state)
---
"┌ Repos & Worktrees (0 active) ──────────────────────────────────────────────┐┌ All Workflow Runs (H: show history, V: ┐"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                          ┌ Model Picker ──────────────────────────────────────────────────┐                          │"
"│                          │                                                                │                          │"
"│                          │  worktree: feat-login                                          │                          │"
"│                          │                                                                │                          │"
"│                          │  Using: claude-sonnet-4-6  (from global config)                │                          │"
"│                          │         ↑ override with:                                       │                          │"
"│                          │                                                                │                          │"
"│                          │ claude (built-in)                                              │                          │"
"│                          │    ★★★ opus    — Planning, architecture, complex analysis      │                          │"
"│                          │  ▸ ★★ sonnet  — General implementation (default) (current)     │                          │"
"│                          │    ★ haiku   — Commit messages, formatting, quick edits        │                          │"
"│                          │                                                                │                          │"
"│                          │  (Backspace to clear model override)                           │                          │"
"│                          │                                                                │                          │"
"│                          │  j/k navigate sections  Enter select  Esc cancel               │                          │"
"│                          │                                                                │                          │"
"│                          │                                                                │                          │"
"│                          │                                                                │                          │"
"│                          │                                                                │                          │"
"│                          │                                                                │                          │"
"│                          │                                                                │                          │"
"│                          │                                                                │                          │"
"│                          │                                                                │                          │"
"│                          │                                                                │                          │"
"│                          │                                                                │                          │"
"│                          └────────────────────────────────────────────────────────────────┘                          │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            │└────────────────────────────────────────┘"
"│                                                                            │┌ All Workflow Definitions ──────────────┐"
"│                                                                            ││                                        │"
"└────────────────────────────────────────────────────────────────────────────┘└────────────────────────────────────────┘"
"[Dashboard]  Tab:panel  [/]:column  \:workflows  [S]:settings  q:quit                                                   "
