conductor-tui/tests/snapshots/tui_snapshots__snap_modal_progress.snap
---
source: conductor-tui/tests/tui_snapshots.rs
expression: render_to_string(&state)
---
"┌ Repos & Worktrees (0 active) ──────────────────────────────────────────────┐┌ All Workflow Definitions ──────────────┐"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                             ┌ In Progress ─────────────────────────────────────────────┐─────────────────────────────┘"
"│                             │                                                          │ow Runs (Space=expand/collaps┐"
"│                             │Pushing branch…                                           │                             │"
"│                             │                                                          │                             │"
"│                             │  Please wait…                                            │                             │"
"│                             │                                                          │                             │"
"│                             │                                                          │                             │"
"│                             │                                                          │                             │"
"│                             │                                                          │                             │"
"│                             └──────────────────────────────────────────────────────────┘                             │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"└────────────────────────────────────────────────────────────────────────────┘└────────────────────────────────────────┘"
"[Dashboard]  Tab:panel  [/]:column  \:workflows  q:quit                                                                 "
