conductor-tui/tests/snapshots/tui_snapshots__snap_modal_theme_picker.snap
---
source: conductor-tui/tests/tui_snapshots.rs
expression: render_to_string(&state)
---
"┌ Repos & Worktrees (0 active) ──────────────────────────────────────────────┐┌ All Workflow Runs (H: show history) ───┐"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                   ┌ Theme Picker ────────────────────────────────┐                                   │"
"│                                   │                                              │                                   │"
"│                                   │  [↑↓] browse  [⏎] apply  [Esc] cancel        │                                   │"
"│                                   │                                              │                                   │"
"│                                   │  ▸ Conductor (default) (current)             │                                   │"
"│                                   │    Dark                                      │                                   │"
"│                                   │    Light                                     │                                   │"
"│                                   │                                              │                                   │"
"│                                   │                                              │                                   │"
"│                                   │                                              │                                   │"
"│                                   │                                              │                                   │"
"│                                   │                                              │                                   │"
"│                                   │                                              │                                   │"
"│                                   │                                              │                                   │"
"│                                   │                                              │                                   │"
"│                                   │                                              │                                   │"
"│                                   │                                              │                                   │"
"│                                   │                                              │                                   │"
"│                                   │                                              │                                   │"
"│                                   └──────────────────────────────────────────────┘                                   │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            │└────────────────────────────────────────┘"
"│                                                                            │┌ All Workflow Definitions ──────────────┐"
"│                                                                            ││                                        │"
"└────────────────────────────────────────────────────────────────────────────┘└────────────────────────────────────────┘"
"[Dashboard]  Tab:panel  [/]:column  \:workflows  [S]:settings  q:quit                                                   "
